--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
+  overflow-x: hidden;
+  background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png");
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +17,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+body::-webkit-scrollbar {
+  width: 12px;              
+}
+body::-webkit-scrollbar-track {
+  background: transparent;     
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(37, 37, 37);  
+  border-radius: 20px;    
 }
